--- a/Protifolio/Portifolio.css
+++ b/Protifolio/Portifolio.css
@@ -217,11 +217,14 @@ body{
     color: rgba(255, 255, 255, 0.8);
     line-height: 25px;
 }
+.Section3 .Image2{
+
+}
 .Section3 .Image2 img{
     width: 280px;
     height:360px;
     position: relative;
-    left: 755px;
+    left: 765px;
     border-radius: 5px;
     /* float: right; */
     opacity: 0.85;
@@ -334,12 +337,12 @@ body{
 .Section5{
     background-color: rgba(0, 0, 0, 0.6);
     width: 100%;
-    height: 820px;
+    height: 810px;
 }
 .Section5 .lastMainDiv{
-    background-color: gray;
+    /* background-color: gray; */
     width: 80%;
-    height: 500px;
+    height: 550px;
     margin-left: 10%;
     display: grid;
     grid-template-columns: repeat(2, .1fr);
@@ -351,83 +354,93 @@ body{
     font-weight: bolder;
     position: relative;
     top:3px;
-    left: -50px;
+    left: -90px;
     /* border: 1px solid black; */
     height: 50px;
+   
 }
 /*later add the phone and email icon */
 .Section5 .lastMainDiv input[type*="tel"]{
     position: relative;
     top: 34px;
-    left: -230px;
+    left: -310px;
     padding: 10px;
     font-size: 15px;
     border: none;
-    width: 250px;
-    background-color: gray;
+    width: 160px;
+    background-color:transparent;
     color: white;
     text-align: left;
+    outline: none;
     /* border: 1px solid black; */
     
 }
 .Section5 .lastMainDiv div input[type*="email"]{
     background-color: transparent;
     position: relative;
-    left: -90px;
+    left: -120px;
     color: white;
+    width: 200px;
+    outline: none;
 }
 
 .Section5 .lastMainDiv input[type*="email"]{
     position: relative;
-    left: -50px;
+    left: -100px;
     top: -5px;
     font-size: 15px;
-    width: 300px;
+    width: 350px;
     text-align: left;
     /* border: 1px solid black; */
     border: none;
+    outline: none;
 }
 .Section5 .lastMainDiv form input[type="text"], input[type="email"]{
-    margin-left: 50px;
+    margin-left: 10px;
     padding: 10px;
-    width: 250px;
+    width: 300px;
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.6);
     border: none;
     color: white;
+    outline: none;
+    position: relative;
+    top: 5px;
     
 }
 .Section5 .lastMainDiv form input[type="email"]{
     background-color: white;
     position: relative;
-    top: -37px;
-    left: 270px;
-     width: 250px;
+    top: 6px;
+    left: 0px;
+     width: 300px;
      background-color: rgba(0, 0, 0, 0.6);
      border: none;
      
 }
 .Section5 .lastMainDiv form #purposalReq{
-    width: 520px;
+    width: 615px;
     position: relative;
-    top: -20px;
+    top:20px;
     border: none;
 
 }
 /*aligning the placeholder value on top right of message box*/
 .Section5 .lastMainDiv form #Message{
-    width: 520px;
+    width: 615px;
     padding-bottom: 200px;
     /* height: 200px; */
     text-align: left;
+    position: relative;
+    top: 38px;
     
 }
 
 .Section5 .lastMainDiv form p {
     color: rgba(255, 255, 255, 0.8);
     position: relative;
-    top: 0px;
-    left: 320px;
+    top: 40px;
+    left: 370px;
     font-size: 18px;
 }
 /*flaw on changing the size and color of checkbox*/
@@ -451,16 +464,20 @@ body{
     border-radius: 7px;
     font-size: 16px;
     position: relative;
-    top: -50px;
-    left: 475px;
+    top: -10px;
+    left: 532px;
 }
-.Section5 .lastMainDiv form input[type*="url"] {
+/*How to add google map to the url section?*/
+.Section5 .lastMainDiv form #url {
     position: relative;
-    top: -415px;
-    left: 500px;
-    width: 350px;
-    padding-bottom: 325px;
+    top: -358px;
+    left: 555px;
+    width: 360px;
+    height: 180px;
+    padding-bottom: 315px;
+    padding-top: 15px;
     background-color:rgba(0, 0, 0, 0.6);
     border: none;
     border-radius: 2px;
+    outline: none;
 }
